objects/Disconnect_Line_Item__c/Disconnect_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Turn Down</label>
    <nameField>
        <displayFormat>DLI-{00000}</displayFormat>
        <label>DLI Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Turn Downs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>