objects/Disconnect_Line_Item__c/fields/EPCProductDescription__c.field-meta.xml
<CustomField>
    <fullName>EPCProductDescription__c</fullName>
    <label>EPC Product Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>