objects/Disconnect_Line_Item__c/fields/FirstCN__c.field-meta.xml
<CustomField>
    <fullName>FirstCN__c</fullName>
    <label>First CN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>