objects/Disconnect_Line_Item__c/fields/Opportunity_Location__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Location__c</fullName>
    <label>Opportunity Location</label>
    <referenceTo>Opportunity_Location__c</referenceTo>
    <relationshipName>Disconnect_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>