objects/Disconnect_Line_Item__c/fields/ServiceProductID__c.field-meta.xml
<CustomField>
    <fullName>ServiceProductID__c</fullName>
    <label>Service Product ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>